--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,9 @@
         "sort-packages": true,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
+        },
+        "platform": {
+            "php": "8.1"
         }
     },
     "minimum-stability": "dev",
