--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
-            - "8000:80"
-#            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+            - "8001:80"
+        #            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
@@ -26,17 +26,19 @@ services:
             - mysql
     mysql:
         image: 'mysql/mysql-server:8.0'
+        #        container_name: 'articles-system_mysql_two'
         ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
+#            - '${FORWARD_DB_PORT:-3307}:3307'
+            - 3307:3306
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ROOT_HOST: "%"
             MYSQL_DATABASE: '${DB_DATABASE}'
             MYSQL_USER: '${DB_USERNAME}'
             MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
+            MYSQL_TCP_PORT: 3307
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
+#            - './articles-system-mysql:/var/lib/mysql'
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
             - sail
